force-app/main/default/objects/Instructor_Training_Catalog__c/Instructor_Training_Catalog__c.object-meta.xml
<CustomObject>
    <label>Instructor Training Catalog</label>
    <nameField>
        <label>Instructor Training Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructor Training Catalogs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>