force-app/main/default/objects/Instructor_Training_Catalog__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <description>To capture certification name</description>
    <label>Certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>