force-app/main/default/objects/Instructor_Training_Catalog__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>To capture description of training catalog</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>