force-app/main/default/objects/Instructor_Training_Catalog__c/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <description>To capture durations in days</description>
    <label>Duration (Days)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>