force-app/main/default/objects/Instructor_Training_Catalog__c/fields/Pre_Work__c.field-meta.xml
<CustomField>
    <fullName>Pre_Work__c</fullName>
    <description>To capture certification name required before training</description>
    <label>Pre-Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>