force-app/main/default/objects/Instructor_Training_Catalog__c/listViews/Active_Courses.listView-meta.xml
<ListView>
    <fullName>Active_Courses</fullName>
    <columns>Region__c</columns>
    <columns>Active__c</columns>
    <columns>Audience__c</columns>
    <columns>Training_Hours__c</columns>
    <columns>Course_ID__c</columns>
    <columns>Duration_Days__c</columns>
    <columns>Pre_Work__c</columns>
    <columns>Pre_Requisites__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Courses</label>
</ListView>