force-app/main/default/objects/Instructor_Training_Catalog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Region__c</columns>
    <columns>Active__c</columns>
    <columns>Audience__c</columns>
    <columns>Training_Hours__c</columns>
    <columns>Course_ID__c</columns>
    <columns>Duration_Days__c</columns>
    <columns>Pre_Work__c</columns>
    <columns>Pre_Requisites__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>